# embedded-sprint

./: .gitignore  CMakeLists.txt  README.md  final_sprint_embedded_detailed.txt
day01/: dynarray.c  dynarray.h  memlab.c  overview.md  ptrutils.c
day02/: bitutils.c  bitutils.h  cbuf.c  cbuf.h  overview.md  registers.c  registers.h
day03/: overview.md
day03/firmware/: day03_fw.ioc
day03/firmware/Core/Inc/: main.h
day03/firmware/Core/Src/: gpio.c  main.c
day04/: overview.md
day04/firmware/: day04_fw.ioc
day04/firmware/Core/Inc/: main.h  stm32f4xx_it.h
day04/firmware/Core/Src/: gpio.c  main.c  stm32f4xx_it.c  tim.c
day05/: overview.md
day05/firmware/: day05_fw.ioc
day05/firmware/Core/Inc/: stm32f4xx_it.h
day05/firmware/Core/Src/: dma.c  gpio.c  main.c  spi.c  stm32f4xx_it.c
day06/: overview.md
day06/firmware/: day06_fw.ioc
day06/firmware/Core/Inc/: cbuf.h  main.h
day06/firmware/Core/Src/: main.c
day07/: overview.md
day08/: overview.md
day09/: overview.md
day10/: overview.md
day11/: overview.md
day12/: overview.md
day13/: overview.md
day14/: overview.md
minitest/: minitest.h
